--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
     "angular-ui-router": "~0.2.15",
-    "angular": "~1.4.3"
+    "angular": "~1.4.3",
+    "angular-route": "~1.4.4"
   },
   "main": "index.html",
   "keywords": [
