Добавлена страница достижений, поправлена главная страница

--- a/json/projects.json
+++ b/json/projects.json
@@ -1,14 +1,114 @@
 [{
   "Id": 1,
-  "Name": "Blade and Soul",
+  "Name": "Neverwinter",
   "ShortName": "BnS",
   "Developer":"",
   "Publisher":"",
   "Year": 2015,
-  "ImageActive": "url",
-  "Image": "url",
+  "ImageActive": "images/icons/projects/Nevercolor.png",
+  "Image": "images/icons/projects/Never.png",
   "HeaderText": "Header",
-  "Description": "Bla Bla Bla",
+  "Description": "For our long-standing fans and loyal players, we would like to say thank you and show our appreciatio prior to January 23, 2015 and who upgrade their acco",
+  "Players": [
+    "Kym",
+    "Krizis",
+    "Veles",
+    "Predves"
+  ],
+  "Janre": "MMORPG",
+  "Guild": "RA",
+  "OfficialSite":"url"
+},{
+  "Id": 1,
+  "Name": "Skyforge",
+  "ShortName": "BnS",
+  "Developer":"",
+  "Publisher":"",
+  "Year": 2015,
+  "ImageActive": "images/icons/projects/Skyforgecolor.png",
+  "Image": "images/icons/projects/Skyforge.png",
+  "HeaderText": "Header",
+  "Description": "For our long-standing fans and loyal players, we would like to say thank you and show our appreciatio prior to January 23, 2015 and who upgrade their acco",
+  "Players": [
+    "Kym",
+    "Krizis",
+    "Veles",
+    "Predves"
+  ],
+  "Janre": "MMORPG",
+  "Guild": "RA",
+  "OfficialSite":"url"
+},{
+  "Id": 1,
+  "Name": "ArcheAge",
+  "ShortName": "BnS",
+  "Developer":"",
+  "Publisher":"",
+  "Year": 2015,
+  "ImageActive": "images/icons/projects/AAcolor.png",
+  "Image": "images/icons/projects/AA.png",
+  "HeaderText": "Header",
+  "Description": "In our January 23 FAQ, we wanted to clarify that Guild Wars 2: Heart of Thorns would not be a stand-a(Factions® and Nightfall®), but instead would be a tr",
+  "Players": [
+    "Kym",
+    "Krizis",
+    "Veles",
+    "Predves"
+  ],
+  "Janre": "MMORPG",
+  "Guild": "RA",
+  "OfficialSite":"url"
+},{
+  "Id": 1,
+  "Name": "GuildWars2",
+  "ShortName": "BnS",
+  "Developer":"",
+  "Publisher":"",
+  "Year": 2015,
+  "ImageActive": "images/icons/projects/GW2color.png",
+  "Image": "images/icons/projects/GW2.png",
+  "HeaderText": "Header",
+  "Description": "For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w",
+  "Players": [
+    "Kym",
+    "Krizis",
+    "Veles",
+    "Predves"
+  ],
+  "Janre": "MMORPG",
+  "Guild": "RA",
+  "OfficialSite":"url"
+},{
+  "Id": 1,
+  "Name": "Tera",
+  "ShortName": "BnS",
+  "Developer":"",
+  "Publisher":"",
+  "Year": 2015,
+  "ImageActive": "images/icons/projects/Teracolor.png",
+  "Image": "images/icons/projects/Tera.png",
+  "HeaderText": "Header",
+  "Description": "For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w",
+  "Players": [
+    "Kym",
+    "Krizis",
+    "Veles",
+    "Predves"
+  ],
+  "Janre": "MMORPG",
+  "Guild": "RA",
+  "OfficialSite":"url"
+},{
+  "Id": 1,
+  "Name": "WorldOfWarcraft",
+  "ShortName": "BnS",
+  "Developer":"",
+  "Publisher":"",
+  "Year": 2015,
+  "ImageActive": "images/icons/projects/WOWcolor.png",
+  "Image": "images/icons/projects/WOW.png",
+  "HeaderText": "Header",
+  "Description": "For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w",
   "Players": [
     "Kym",
     "Krizis",
