--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-postcss": "^0.6.0",
     "http-server": "^0.8.0",
     "jquery-mousewheel": "^3.1.13"
   },
