Доработка сайта, правим баги чистим код

--- a/json/projects.json
+++ b/json/projects.json
@@ -8,7 +8,7 @@
   "ImageActive": "images/projects/Nevercolor.png",
   "Image": "images/projects/Never.png",
   "HeaderText": "Header",
-  "Description": "For our long-standing fans and loyal players, we would like to say thank you and show our appreciatio prior to January 23, 2015 and who upgrade their acco",
+  "Description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat.",
   "Players": [
     "Kym",
     "Krizis",
@@ -28,7 +28,7 @@
   "ImageActive": "images/projects/Skyforgecolor.png",
   "Image": "images/projects/Skyforge.png",
   "HeaderText": "Header",
-  "Description": "For our long-standing fans and loyal players, we would like to say thank you and show our appreciatio prior to January 23, 2015 and who upgrade their acco",
+  "Description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat.",
   "Players": [
     "Kym",
     "Krizis",
@@ -48,7 +48,7 @@
   "ImageActive": "images/projects/AAcolor.png",
   "Image": "images/projects/AA.png",
   "HeaderText": "Header",
-  "Description": "In our January 23 FAQ, we wanted to clarify that Guild Wars 2: Heart of Thorns would not be a stand-a(Factions® and Nightfall®), but instead would be a tr",
+  "Description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat.",
   "Players": [
     "Kym",
     "Krizis",
@@ -68,7 +68,7 @@
   "ImageActive": "images/projects/GW2color.png",
   "Image": "images/projects/GW2.png",
   "HeaderText": "Header",
-  "Description": "For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w",
+  "Description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat.",
   "Players": [
     "Kym",
     "Krizis",
@@ -88,7 +88,7 @@
   "ImageActive": "images/projects/Teracolor.png",
   "Image": "images/projects/Tera.png",
   "HeaderText": "Header",
-  "Description": "For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w",
+  "Description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat.",
   "Players": [
     "Kym",
     "Krizis",
@@ -108,7 +108,7 @@
   "ImageActive": "images/projects/WOWcolor.png",
   "Image": "images/projects/WOW.png",
   "HeaderText": "Header",
-  "Description": "For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w",
+  "Description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum eius adipisci quisquam dolorum delectus quasi rem magnam, molestias repellendus officia blanditiis dolores nihil, voluptate minima recusandae. Nostrum, aliquam, placeat.",
   "Players": [
     "Kym",
     "Krizis",
